# face-recognition-and-capture-app

./: README.md  pyproject.toml  recognition_app.py
