[tool.poetry]
name = "face-recognition-and-capture-app"
version = "1.0.0"
description = ""
authors = ["Nikk Dusky"]

[tool.poetry.dependencies]
python = "^3.9"
PyQt5 = "^5.15.4"
opencv-python = "^4.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
